--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^6.20.2",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.17.1",
     "lucide-react": "^0.344.0",
     "pg": "^8.13.0",
